--- a/Week3.ipynb
+++ b/Week3.ipynb
@@ -261,11 +261,7 @@
    "outputs": [],
    "source": [
     "# Ignore cells with a borough that is \"Not assigned\"\n",
-    "data = data[data['Borough']!='Not assigned']\n",
-    "\n",
-    "# If a cell has a borough but a \"Not assigned\" neighborhood, then the neighborhood will be the same as the borough\n",
-    "#neighborhoods_to_replace = data['Neighborhood']=='Not assigned'\n",
-    "#data.loc[neighborhoods_to_replace, 'Neighborhood'] = data.loc[neighborhoods_to_replace, 'Borough']"
+    "data = data[data['Borough']!='Not assigned']"
    ]
   },
   {
